<resources>
    <string name="MyTodolist_app_name">یادداشت های من</string>
    <string name="MyTodolist_splash_title_name">😊 سلام دوست من</string>
    <string name="MyTodolist_description_app">برنامه یادداشت های من با طراحی ساده این امکان را به شما میدهد تا در سریع ترین زمان ممکن یادداشت های خود را ثبت کنید.</string>
    <string name="MyTodolist_extButton_name">بزن بریم</string>
    <string name="MyTodolist_edt_text_search">.. یادداشت خود را جست و جو کنید</string>
    <string name="MyTodolist_title_emptyItem_home">هیچ یادداشتی موجود نیست.</string>
    <string name="MyTodolist_explain_emptyItem_home">برای ایجاد یادداشت دکمه افزودن رو بزن</string>
    <string name="MyTodolist_extButton_add">افزودن</string>
    <string name="MyTodolist_title_toolbar_addNote_detail">افزودن یادداشت</string>
    <string name="MyTodolist_title_toolbar_edit_detail">ویرایش</string>
    <string name="MyTodolist_title_detail">عنوان</string>
    <string name="MyTodolist_extButton_save">ذخیره</string>
    <string name="MyTodolist_description_detail">توضیحات (اختیاری)</string>
    <string name="MyTodolist_title_dialog_edit_detail">آیا مایل به حذف این یادداشت هستید؟</string>
    <string name="MyTodolist_title_buttonPositive_dialog">بله پاک کن</string>
    <string name="MyTodolist_title_dialog_deleteAll_home">آیا مایل به حذف همه یادداشت ها هستید؟</string>
    <string name="MyTodolist_title_buttonPositive_deleteAll_dialog">بله همه رو پاک کن </string>
    <string name="MyTodolist_title_buttonNegative_dialog">انصراف</string>
    <string name="MyTodolist_msg_detail">عنوان نباید خالی باشد</string>

</resources>