<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detail.DetailFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:layout_marginTop="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textAppearance="@style/TextAppearanceBold.TitleToolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_back_detail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.515" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_icon" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_share_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/share" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_delete_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/img_share_edit"
                app:layout_constraintEnd_toStartOf="@+id/img_share_edit"
                app:layout_constraintTop_toTopOf="@+id/img_share_edit"
                app:srcCompat="@drawable/delete"
                app:tint="@color/MyTodolist_iconColor_delete_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_nested"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_date_time_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearanceRegular.calenderAddNote"
                app:layout_constraintEnd_toEndOf="@id/layout_nested"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_nested"
                tools:text="24اردیبهشت 1401 ،20:46" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_colors"
                android:layout_width="0dp"
                android:layout_height="74dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/MyTodolist_color_blue"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_date_time_detail"
                tools:background="@color/black">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/all_icon_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:paddingEnd="8dp"
                    app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
                    app:reverseLayout="true"
                    tools:itemCount="6" />
            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_colors">

                <RelativeLayout
                    android:id="@+id/layout_title"
                    android:layout_width="match_parent"
                    android:layout_height="73dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/MyTodolist_title_detail"
                        android:textAppearance="@style/TextAppearanceRegular.Text_Title_Detail" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edt_title"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:background="@drawable/edt_title_detail_background"
                            android:paddingStart="12dp"
                            android:paddingEnd="36dp"
                            android:textAppearance="@style/TextAppearanceRegular.Text_Edt_Detail"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        </androidx.appcompat.widget.AppCompatEditText>

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/img_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="16dp"
                            android:layout_marginEnd="12dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/clear" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_below="@+id/layout_title"
                    android:layout_marginTop="10dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/MyTodolist_description_detail"
                        android:textAppearance="@style/TextAppearanceRegular.Text_Title_Detail" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_description"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_below="@id/txt_title_description"
                        android:background="@drawable/edt_desc_detail_background"
                        android:gravity="start"
                        android:minLines="4"
                        android:paddingStart="12dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="15dp"
                        android:textAppearance="@style/TextAppearanceRegular.Text_Edt_Detail" />
                </RelativeLayout>

            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/MyTodolist_extButton_save"
        android:textAppearance="@style/TextAppearanceBold.extButton_save"
        app:icon="@drawable/tik"
        app:iconGravity="end"
        app:iconSize="16dp" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>